# Organizational_Structure

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 9ef0f8261f1f_init_tables.py
api/: deps.py
api/routes/: __init__.py  departments.py
core/: database.py
dto/: department_dto.py  employee_dto.py
exceptions/: department.py
models/: base.py  department.py  employee.py
repositories/: base_repository.py  department_repository.py  employee_repository.py
schemas/: department.py  employee.py
services/: department_service.py  employee_service.py
tests/: conftest.py  test_departments.py  test_employees.py
